discussion/kv_engine/127225/127225_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

Add PiTR drain program

Change-Id: Icab52e032489f96a1838ea02d77434f26e889b22

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-05-11 05:16:37.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-11 05:46:11.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28028/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1404): error C2039: "seekFirstHeaderContaining": is not a member of "cb::couchstore" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28028/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2151/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/programs/dcpdrain/dcpdrain.cc:164:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    option long_options[] = {{"ipv4", no_argument, nullptr, "4"},
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2151/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23991/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: no member named "seekFirstHeaderContaining" in namespace "cb::couchstore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23991/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2667/ : FAILURE

Compile error at [2020-05-11T05:17:56.016Z] /Library/Developer/CommandLineTools_11.3.1/usr/bin/../include/c++/v1/wchar.h:119:15:
fatal error: "wchar.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2667/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3610/ : FAILURE

Compile error at [2020-05-11T05:41:32.642Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3610/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3583/ : FAILURE

Compile error at [2020-05-11T05:29:07.971Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3583/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11455/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3670/ : FAILURE

Compile error at [2020-05-11T05:38:25.478Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3670/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/672/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-11 07:18:21.000000000
Message: 
Patch Set 10:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28028/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1404): error C2039: "seekFirstHeaderContaining": is not a member of "cb::couchstore" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28028/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2151/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/programs/dcpdrain/dcpdrain.cc:164:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    option long_options[] = {{"ipv4", no_argument, nullptr, "4"},
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2151/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23991/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: no member named "seekFirstHeaderContaining" in namespace "cb::couchstore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23991/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3610/ : FAILURE

Compile error at [2020-05-11T05:41:32.642Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3610/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3583/ : FAILURE

Compile error at [2020-05-11T05:29:07.971Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3583/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11455/ : FAILURE

Compile error at [2020-05-11T05:45:13.990Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11455/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3670/ : FAILURE

Compile error at [2020-05-11T05:38:25.478Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3670/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2673/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/672/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
